# bi-cloud

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dagster_cloud.yaml  pyproject.toml  requirements.txt
.github/workflows/: branch_deployments.yml  deploy.yml
dagster_project/: definitions.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: boolean_flag.sql  clean_text.sql  clean_upper_text.sql  date_key.sql  safe_divide.sql  time_key.sql
dbt_project/models/: sources.yml
dbt_project/models/marts/: marts.yml
dbt_project/models/staging/: stg_comercial__cliente.sql  stg_comercial__contrato_cliente.sql  stg_comercial__entidad.sql  stg_comercial__orden_servicio.sql  stg_comercial__tarifario.sql  stg_comercial__tarifario_detalle.sql  stg_fin__asistencia_empleado.sql  stg_fin__cuenta_credito_cliente.sql  stg_fin__empleado.sql  stg_fin__factura.sql  stg_fin__factura_detalle.sql  stg_fin__gasto_fijo_mensual.sql  (+19 more)
dbt_project/snapshots/: snap_fin__cuenta_credito_cliente.sql
dbt_project/tests/: test_fact_rrhh_mensual_unique.sql  test_fact_tracking_evento_unique.sql
docs/: CONFIG_AIRBYTE_DAGSTER_DBT_CLOUD.md  GUIA_INSTALACION_Y_ORDEN_DEL_PROYECTO.md  README.md
docs/conexion/: conexion_bore.txt
docs/dbt_auxiliares/: EDA_SNOWFLAKE_DWH.md  GUIA_AIRBYTE_MYSQL_BORE_NGROK.md  GUIA_CONFIGURACION_SNOWFLAKE_DBT.md  eda_snowflake_dwh.py  eda_snowflake_dwh_ejecutivo.py
scripts/: bootstrap_dwh_dev_cloud.sql  check_raw_sources.sql  load_env.ps1  prepare_manifest.ps1  run_dbt.ps1  start_dagster_local.ps1  validar_dwh_dev_cloud.sql
(+48 files in other folders)
