[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bi-transportes-dagster-dbt-cloud"
version = "0.1.0"
description = "Dagster + dbt project for Snowflake and Dagster+ Serverless"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dagster==1.12.20",
  "dagster-webserver==1.12.20",
  "dagster-dg-cli==1.12.20",
  "dagster-cloud==1.12.20",
  "dbt-core==1.11.7",
  "dbt-snowflake==1.11.3",
]

[tool.setuptools]
packages = ["dagster_project"]

[tool.dg.project]
root_module = "dagster_project"
code_location_name = "bi_transportes_orquestacion"
